--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "launch-core"]
-	path = launch-core
+[submodule "extern/launch-core"]
+	path = extern/launch-core
 	url = git@github.com:RIT-Launch-Initiative/launch-core.git
